--- a/src/app/shared/components/recipe-filters/recipe-filters.css
+++ b/src/app/shared/components/recipe-filters/recipe-filters.css
@@ -5,7 +5,7 @@
   border-radius: 12px;
   border: 1.5px solid lightgrey;
   outline: none;
-
+  background-color: white;
   box-sizing: border-box;
   
   margin-top: 16px;
@@ -99,6 +99,7 @@
   font-size: 14px;
   font-family: var(--font-primary);
   background: transparent;
+  color: black;
   
 }
 
@@ -155,6 +156,7 @@ label input{
   display: flex;
   align-items: center;
   justify-content: space-between;
+  color: black;
 
   background: #ffffff;
   border: 1.5px solid lightgrey;
@@ -235,7 +237,7 @@ label input{
   background: #ffffff;
   border: 1.5px solid lightgrey;
   border-radius: 10px;
-
+  color: black;
   cursor: pointer;
   transition: all 0.1s ease;
   padding: 8px 14px;
